Completed About US and fixed icons headers and footers

--- a/about.html
+++ b/about.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <!-- ==============================
-    Project:        Metronic "Asentus" Frontend Freebie - Responsive HTML Template Based On Twitter Bootstrap 3.3.4
+    Project:        "the binary studio"
     Version:        1.0
-    Author:         KeenThemes
-    Primary use:    Corporate, Business Themes.
-    Email:          support@keenthemes.com
+    Author:         Anand Gupta
+    Primary use:    Corporate.
+    Email:          prashant@thebinarystudio.com
     Follow:         http://www.twitter.com/keenthemes
     Like:           http://www.facebook.com/keenthemes
     Website:        http://www.keenthemes.com
-    Premium:        Premium Metronic Admin Theme: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
 ================================== -->
 <html lang="en" class="no-js">
 <!-- BEGIN HEAD -->
 
 <head>
     <meta charset="utf-8" />
-    <title>Metronic "Asentus" Frontend Freebie</title>
+    <title>the binary studio</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="" name="description" />
@@ -68,8 +67,8 @@
                 <div class="collapse navbar-collapse nav-collapse">
                     <div class="menu-container">
                         <ul class="navbar-nav navbar-nav-right">
-                            <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href="about.html">About</a></li>
+                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="about.html">About</a></li>
                             <li class="nav-item"><a class="nav-item-child nav-item-hover" href="services.html">Services</a></li>
                             <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html">Projects</a></li>
                             <!-- <li class="nav-item"><a class="nav-item-child nav-item-hover" href="faq.html">FAQ</a></li> -->
@@ -88,8 +87,8 @@
     <div class="parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/01.jpg">
         <div class="parallax-content container">
             <h1 class="carousel-title">About Us</h1>
-            <p>Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua <br /> enim minim estudiat veniam siad
-                venumus dolore</p>
+            <!-- <p>Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua <br /> enim minim estudiat veniam siad
+                venumus dolore</p> -->
         </div>
     </div>
     <!--========== PARALLAX ==========-->
@@ -133,7 +132,7 @@
     <div class="content-lg container">
         <div class="row margin-b-20">
             <div class="col-sm-6">
-                <h2>About</h2>
+                <h2>About the studio</h2>
             </div>
         </div>
         <!--// end row -->
@@ -290,12 +289,16 @@
                     <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".6s">
                         <div class="service" data-height="height">
                             <div class="service-element">
-                                <i class="service-icon icon-badge"></i>
+                                <img src="./img/icons/Icon-Visual Merchandising.png" class="service-icon adjust"></img>
                             </div>
                             <div class="service-info">
-                                <h3>Visual Merchandising</h3>
-                                <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat
-                                    dolor</p>
+                                <h3>Commercial Visual Merchandising</h3>
+                                <p class="margin-b-5">Visual Merchandising is clearly about creating merchandising
+                                    presentations that are exciting, captivating and engaging to the consumer. We work
+                                    closely with Clients to analyze the effectiveness of their visual merchandising
+                                    techniques: from store planning to visual sight lines and best utilization of
+                                    provided space in order to create a perfect point of sale. Our team is specialized
+                                    in designing cafes, restaurants, retail, and automobile stores.</p>
                             </div>
                             <a href="#" class="content-wrapper-link"></a>
                         </div>
@@ -313,8 +316,8 @@
             <div class="row margin-b-40">
                 <div class="col-sm-6">
                     <h2>Meet the Team</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore
-                        magna aliqua enim minim veniam exercitation</p>
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore
+                        magna aliqua enim minim veniam exercitation</p> -->
                 </div>
             </div>
             <!--// end row -->
@@ -380,24 +383,24 @@
                     <div class="col-sm-2 sm-margin-b-50">
                         <!-- List -->
                         <ul class="list-unstyled footer-list">
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">Home</a></li>
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">About</a></li>
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">Products</a></li>
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">Pricing</a></li>
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">Clients</a></li>
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">Careers</a></li>
+                            <li class="footer-list-item"><a class="footer-list-link" href="index.html">Home</a></li>
+                            <li class="footer-list-item"><a class="footer-list-link" href="about.html">About</a></li>
+                            <li class="footer-list-item"><a class="footer-list-link" href="services.html">Services</a></li>
+                            <li class="footer-list-item"><a class="footer-list-link" href="projects.html">Projects</a></li>
+                            <li class="footer-list-item"><a class="footer-list-link" href="contact.html">Contact</a></li>
+                            <!-- <li class="footer-list-item"><a class="footer-list-link" href="#">Careers</a></li>
                             <li class="footer-list-item"><a class="footer-list-link" href="#">Contact</a></li>
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">Terms</a></li>
+                            <li class="footer-list-item"><a class="footer-list-link" href="#">Terms</a></li> -->
                         </ul>
                         <!-- End List -->
                     </div>
                     <div class="col-sm-4 sm-margin-b-30">
                         <!-- List -->
                         <ul class="list-unstyled footer-list">
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">Twitter</a></li>
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">Facebook</a></li>
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">Instagram</a></li>
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">YouTube</a></li>
+                            <!-- <li class="footer-list-item"><a class="footer-list-link" href="#">Twitter</a></li> -->
+                            <li class="footer-list-item"><a class="footer-list-link" href="https://www.facebook.com/thebinarystudio/">Facebook</a></li>
+                            <li class="footer-list-item"><a class="footer-list-link" href="https://www.instagram.com/the_binary_studio/">Instagram</a></li>
+                            <li class="footer-list-item"><a class="footer-list-link" href="#">LinkedIn</a></li>
                         </ul>
                         <!-- End List -->
                     </div>
@@ -422,8 +425,8 @@
                     <img class="footer-logo" src="img/logo.png" alt="Asentus Logo">
                 </div>
                 <div class="col-xs-6 text-right">
-                    <p class="margin-b-0"><a class="color-base fweight-700" href="http://keenthemes.com/preview/asentus/">Asentus</a>
-                        Theme Powered by: <a class="color-base fweight-700" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
+                    <p class="margin-b-0"><a class="color-base fweight-700" href="index.html">the
+                            binary studio</a></p>
                 </div>
             </div>
             <!--// end row -->
