--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <!-- ==============================
-    Project:        Metronic "Asentus" Frontend Freebie - Responsive HTML Template Based On Twitter Bootstrap 3.3.4
+    Project:        "the binary studio"
     Version:        1.0
-    Author:         KeenThemes
-    Primary use:    Corporate, Business Themes.
-    Email:          support@keenthemes.com
+    Author:         Anand Gupta
+    Primary use:    Corporate.
+    Email:          prashant@thebinarystudio.com
     Follow:         http://www.twitter.com/keenthemes
     Like:           http://www.facebook.com/keenthemes
     Website:        http://www.keenthemes.com
-    Premium:        Premium Metronic Admin Theme: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
 ================================== -->
+
 <html lang="en" class="no-js">
 <!-- BEGIN HEAD -->
 
 <head>
     <meta charset="utf-8" />
-    <title>Metronic "Asentus" Frontend Freebie</title>
+    <title>the binary studio</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="" name="description" />
@@ -67,12 +67,12 @@
                 <div class="collapse navbar-collapse nav-collapse">
                     <div class="menu-container">
                         <ul class="navbar-nav navbar-nav-right">
-                            <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-item-child nav-item-hover" href="about.html">About</a></li>
                             <li class="nav-item"><a class="nav-item-child nav-item-hover" href="services.html">Services</a></li>
-                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html">Projects</a></li>
+                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href="projects.html">Projects</a></li>
                             <!-- <li class="nav-item"><a class="nav-item-child nav-item-hover" href="faq.html">FAQ</a></li> -->
-                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href="contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -184,24 +184,24 @@
                     <div class="col-sm-2 sm-margin-b-50">
                         <!-- List -->
                         <ul class="list-unstyled footer-list">
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">Home</a></li>
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">About</a></li>
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">Products</a></li>
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">Pricing</a></li>
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">Clients</a></li>
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">Careers</a></li>
+                            <li class="footer-list-item"><a class="footer-list-link" href="index.html">Home</a></li>
+                            <li class="footer-list-item"><a class="footer-list-link" href="about.html">About</a></li>
+                            <li class="footer-list-item"><a class="footer-list-link" href="services.html">Services</a></li>
+                            <li class="footer-list-item"><a class="footer-list-link" href="projects.html">Projects</a></li>
+                            <li class="footer-list-item"><a class="footer-list-link" href="contact.html">Contact</a></li>
+                            <!-- <li class="footer-list-item"><a class="footer-list-link" href="#">Careers</a></li>
                             <li class="footer-list-item"><a class="footer-list-link" href="#">Contact</a></li>
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">Terms</a></li>
+                            <li class="footer-list-item"><a class="footer-list-link" href="#">Terms</a></li> -->
                         </ul>
                         <!-- End List -->
                     </div>
                     <div class="col-sm-4 sm-margin-b-30">
                         <!-- List -->
                         <ul class="list-unstyled footer-list">
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">Twitter</a></li>
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">Facebook</a></li>
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">Instagram</a></li>
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">YouTube</a></li>
+                            <!-- <li class="footer-list-item"><a class="footer-list-link" href="#">Twitter</a></li> -->
+                            <li class="footer-list-item"><a class="footer-list-link" href="https://www.facebook.com/thebinarystudio/">Facebook</a></li>
+                            <li class="footer-list-item"><a class="footer-list-link" href="https://www.instagram.com/the_binary_studio/">Instagram</a></li>
+                            <li class="footer-list-item"><a class="footer-list-link" href="#">LinkedIn</a></li>
                         </ul>
                         <!-- End List -->
                     </div>
@@ -226,8 +226,8 @@
                     <img class="footer-logo" src="img/logo.png" alt="Asentus Logo">
                 </div>
                 <div class="col-xs-6 text-right">
-                    <p class="margin-b-0"><a class="color-base fweight-700" href="http://keenthemes.com/preview/asentus/">Asentus</a>
-                        Theme Powered by: <a class="color-base fweight-700" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
+                    <p class="margin-b-0"><a class="color-base fweight-700" href="index.html">the
+                        binary studio</a></p>
                 </div>
             </div>
             <!--// end row -->
