--- a/projects.html
+++ b/projects.html
@@ -69,8 +69,8 @@
                         <ul class="navbar-nav navbar-nav-right">
                             <li class="nav-item"><a class="nav-item-child nav-item-hover" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-item-child nav-item-hover" href="about.html">About</a></li>
-                            <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="services.html">Services</a></li>
-                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href="projects.html">Projects</a></li>
+                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href="services.html">Services</a></li>
+                            <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="projects.html">Projects</a></li>
                             <!-- <li class="nav-item"><a class="nav-item-child nav-item-hover" href="faq.html">FAQ</a></li> -->
                             <li class="nav-item"><a class="nav-item-child nav-item-hover" href="contact.html">Contact</a></li>
                         </ul>
@@ -86,7 +86,7 @@
     <!--========== PARALLAX ==========-->
     <div class="parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/01.jpg">
         <div class="parallax-content container">
-            <h1 class="carousel-title">Product Pricing</h1>
+            <h1 class="carousel-title">Products</h1>
             <p>Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua <br /> enim minim estudiat veniam siad
                 venumus dolore</p>
         </div>
@@ -94,123 +94,108 @@
     <!--========== PARALLAX ==========-->
 
     <!--========== PAGE LAYOUT ==========-->
-    <!-- Pricing -->
-    <div class="bg-color-sky-light">
-        <div class="content-lg container">
-            <div class="row row-space-1">
-                <div class="col-sm-4 sm-margin-b-2">
-                    <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
-                        <!-- Pricing -->
-                        <div class="pricing">
-                            <div class="margin-b-30">
-                                <i class="pricing-icon icon-chemistry"></i>
-                                <h3>Starter Kit <span> - $</span> 49</h3>
-                                <p>Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
-                            </div>
-                            <ul class="list-unstyled pricing-list margin-b-50">
-                                <li class="pricing-list-item">Basic Features</li>
-                                <li class="pricing-list-item">Up to 5 products</li>
-                                <li class="pricing-list-item">50 Users Panels</li>
-                            </ul>
-                            <a href="services.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
-                        </div>
-                        <!-- End Pricing -->
-                    </div>
-                </div>
-                <div class="col-sm-4 sm-margin-b-2">
-                    <div class="wow fadeInUp" data-wow-duration=".3" data-wow-delay=".2s">
-                        <!-- Pricing -->
-                        <div class="pricing pricing-active">
-                            <div class="margin-b-30">
-                                <i class="pricing-icon icon-badge"></i>
-                                <h3>Professional <span> - $</span> 149</h3>
-                                <p>Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
-                            </div>
-                            <ul class="list-unstyled pricing-list margin-b-50">
-                                <li class="pricing-list-item">Basic Features</li>
-                                <li class="pricing-list-item">Up to 100 products</li>
-                                <li class="pricing-list-item">100 Users Panels</li>
-                            </ul>
-                            <a href="services.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
-                        </div>
-                        <!-- End Pricing -->
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="wow fadeInRight" data-wow-duration=".3" data-wow-delay=".1s">
-                        <!-- Pricing -->
-                        <div class="pricing">
-                            <div class="margin-b-30">
-                                <i class="pricing-icon icon-shield"></i>
-                                <h3>Advanced <span> - $</span> 249</h3>
-                                <p>Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
-                            </div>
-                            <ul class="list-unstyled pricing-list margin-b-50">
-                                <li class="pricing-list-item">Extended Features</li>
-                                <li class="pricing-list-item">Unlimited products</li>
-                                <li class="pricing-list-item">Unlimited Users Panels</li>
-                            </ul>
-                            <a href="services.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
-                        </div>
-                        <!-- End Pricing -->
-                    </div>
-                </div>
-            </div>
-            <!--// end row -->
-        </div>
-    </div>
-    <!-- End Pricing -->
-
-    <!-- Testimonials -->
+    <!-- Our Exceptional Solutions -->
     <div class="content-lg container">
-        <div class="row">
-            <div class="col-sm-9">
-                <h2>Why Customers Are Choosing Asentus?</h2>
-
-                <!-- Swiper Testimonials -->
-                <div class="swiper-slider swiper-testimonials">
-                    <!-- Swiper Wrapper -->
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <blockquote class="blockquote">
-                                <div class="margin-b-20">
-                                    Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut
-                                    laboret dolore magna aliqua. Ut enim minim veniam exercitation laboris ut siad
-                                    consequat siad minim enum esqudiat dolore.
-                                </div>
-                                <div class="margin-b-20">
-                                    Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut
-                                    laboret tempor incididunt dolore magna consequat siad minim aliqua.
-                                </div>
-                                <p><span class="fweight-700 color-link">Joh Milner</span>, Metronic Customer</p>
-                            </blockquote>
-                        </div>
-                        <div class="swiper-slide">
-                            <blockquote class="blockquote">
-                                <div class="margin-b-20">
-                                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                                    culpa qui officia deserunt mollit anim id est laborum.
-                                </div>
-                                <div class="margin-b-20">
-                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                    ex ea commodo consequat.
-                                </div>
-                                <p><span class="fweight-700 color-link">Alex Clarson</span>, Metronic Customer</p>
-                            </blockquote>
-                        </div>
-                    </div>
-                    <!-- End Swiper Wrapper -->
-
-                    <!-- Pagination -->
-                    <div class="swiper-testimonials-pagination"></div>
-                </div>
-                <!-- End Swiper Testimonials -->
+        <div class="row margin-b-40">
+            <div class="col-sm-6">
+                <h2>Our Exceptional Solutions</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna
+                    aliqua enim minim veniam exercitation</p>
             </div>
         </div>
         <!--// end row -->
+
+        <div class="row margin-b-50">
+            <!-- Our Exceptional Solutions -->
+            <div class="col-sm-4 sm-margin-b-50">
+                <div class="margin-b-20">
+                    <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                        <img class="img-responsive" src="img/970x647/01.jpg" alt="Our Exceptional Solutions Image">
+                    </div>
+                </div>
+                <h3><a href="#">Triangle Roof</a> <span class="text-uppercase margin-l-20">Management</span></h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna
+                    ut consequat siad esqudiat dolor</p>
+                <a class="link" href="#">Read More</a>
+            </div>
+            <!-- End Our Exceptional Solutions -->
+
+            <!-- Our Exceptional Solutions -->
+            <div class="col-sm-4 sm-margin-b-50">
+                <div class="margin-b-20">
+                    <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                        <img class="img-responsive" src="img/970x647/02.jpg" alt="Our Exceptional Solutions Image">
+                    </div>
+                </div>
+                <h4><a href="#">Curved Corners</a> <span class="text-uppercase margin-l-20">Developmeny</span></h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna
+                    ut consequat siad esqudiat dolor</p>
+                <a class="link" href="#">Read More</a>
+            </div>
+            <!-- End Our Exceptional Solutions -->
+
+            <!-- Our Exceptional Solutions -->
+            <div class="col-sm-4 sm-margin-b-50">
+                <div class="margin-b-20">
+                    <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                        <img class="img-responsive" src="img/970x647/03.jpg" alt="Our Exceptional Solutions Image">
+                    </div>
+                </div>
+                <h4><a href="#">Bird On Green</a> <span class="text-uppercase margin-l-20">Design</span></h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna
+                    ut consequat siad esqudiat dolor</p>
+                <a class="link" href="#">Read More</a>
+            </div>
+            <!-- End Our Exceptional Solutions -->
+        </div>
+        <!--// end row -->
+
+        <div class="row">
+            <!-- Our Exceptional Solutions -->
+            <div class="col-sm-4 sm-margin-b-50">
+                <div class="margin-b-20">
+                    <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                        <img class="img-responsive" src="img/970x647/01.jpg" alt="Our Exceptional Solutions Image">
+                    </div>
+                </div>
+                <h4><a href="#">Triangle Roof</a> <span class="text-uppercase margin-l-20">Management</span></h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna
+                    ut consequat siad esqudiat dolor</p>
+                <a class="link" href="#">Read More</a>
+            </div>
+            <!-- End Our Exceptional Solutions -->
+
+            <!-- Our Exceptional Solutions -->
+            <div class="col-sm-4 sm-margin-b-50">
+                <div class="margin-b-20">
+                    <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                        <img class="img-responsive" src="img/970x647/02.jpg" alt="Our Exceptional Solutions Image">
+                    </div>
+                </div>
+                <h4><a href="#">Curved Corners</a> <span class="text-uppercase margin-l-20">Developmeny</span></h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna
+                    ut consequat siad esqudiat dolor</p>
+                <a class="link" href="#">Read More</a>
+            </div>
+            <!-- End Our Exceptional Solutions -->
+
+            <!-- Our Exceptional Solutions -->
+            <div class="col-sm-4 sm-margin-b-50">
+                <div class="margin-b-20">
+                    <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                        <img class="img-responsive" src="img/970x647/03.jpg" alt="Our Exceptional Solutions Image">
+                    </div>
+                </div>
+                <h4><a href="#">Bird On Green</a> <span class="text-uppercase margin-l-20">Design</span></h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna
+                    ut consequat siad esqudiat dolor</p>
+                <a class="link" href="#">Read More</a>
+            </div>
+            <!-- End Our Exceptional Solutions -->
+        </div>
+        <!--// end row -->
     </div>
-    <!-- End Testimonials -->
+    <!-- End Our Exceptional Solutions -->
 
     <!-- Clients -->
     <div class="bg-color-sky-light">
@@ -244,6 +229,32 @@
         </div>
     </div>
     <!-- End Clients -->
+
+    <!-- Promo Section -->
+    <div class="promo-section overflow-h">
+        <div class="container">
+            <div class="clearfix">
+                <div class="ver-center">
+                    <div class="ver-center-aligned">
+                        <div class="promo-section-col">
+                            <h2>Our Clients</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret
+                                dolore magna aliqua enim minim veniam exercitation ipsum dolor sit amet consectetur
+                                adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam
+                                exercitation</p>
+                            <p>Ipsum dolor sit amet consectetur adipiscing elit sed tempor incididut ut sead laboret
+                                dolore magna aliqua enim minim veniam exercitation ipsum dolor sit amet consectetur
+                                adipiscing</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="promo-section-img-right">
+            <img class="img-responsive" src="img/970x970/01.jpg" alt="Content Image">
+        </div>
+    </div>
+    <!-- End Promo Section -->
     <!--========== END PAGE LAYOUT ==========-->
 
     <!--========== FOOTER ==========-->
@@ -298,7 +309,7 @@
                 </div>
                 <div class="col-xs-6 text-right">
                     <p class="margin-b-0"><a class="color-base fweight-700" href="index.html">the
-                            binary studio</a></p>
+                        binary studio</a></p>
                 </div>
             </div>
             <!--// end row -->
